fix(menu): align menu rows horizontally

--- a/src/CubeGenerator.module.css
+++ b/src/CubeGenerator.module.css
@@ -33,7 +33,7 @@
   display: grid;
   grid-template-columns: max-content 1fr;
   grid-template-rows: repeat(4, max-content);
-  align-items: start;
+  align-items: center;
   justify-items: start;
   row-gap: 0.5rem;
   column-gap: 1rem;
@@ -48,7 +48,6 @@
 
   & select,
   & input {
-    min-width: 100px;
     width: 100%;
   }
 
